# tauri-autocxx-reproduction

./: .gitmodules  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
