[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"
exclude = [
    "/openvr",

    "!/openvr/headers/openvr.h",
    "!/openvr/bin/win64/openvr_api.dll",
    "!/openvr/lib/win64/openvr_api.lib",
    "!/openvr/bin/linux64/libopenvr_api.so",
    "!/openvr/bin/linux32/libopenvr_api.so",
    "!/openvr/bin/linuxarm64/libopenvr_api.so",
    "!/openvr/bin/androidarm64/libopenvr_api.so",
]

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }
autocxx-build = "0.25.0"
normpath = "0.3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [] }
autocxx = "0.25.0"
cxx = "1.0.95"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
